--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
             <script type="text/javascript" src="const.js"></script>
             <script type="text/javascript" src="types.js"></script>
             <script type="text/javascript" src="cast.js"></script>
-
+            <script type="text/javascript" src="Funçoes.js"></script>
+            <script type="text/javascript" src="object.js"></script>
+            <script type="text/javascript" src="array.js"></script>
+            <script type="text/javascript" src="desafio4.js"></script>
+            <script type="text/javascript" src="desafio4pt2.js"></script>
+            
             <title> Desafio css</title>
 
         </head>
